--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/favicon-32x32.png"
+      href="/Invoice-app/assets/favicon-32x32.png"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap"
@@ -19,6 +19,6 @@
   <body>
     <div id="modal"></div>
     <div id="root">not rendered</div>
-    <script type="module" src="/App.jsx"></script>
+    <script type="module" src="/App.tsx"></script>
   </body>
 </html>
