--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    
     <title>Invoice App</title>
+    <script type="module" crossorigin src="/Invoice_app/assets/index.1140ef25.js"></script>
+    <link rel="stylesheet" href="/Invoice_app/assets/index.c3f7519e.css">
   </head>
   <body>
     <div id="modal"></div>
     <div id="root">not rendered</div>
-    <script type="module" src="/App.tsx"></script>
+    
   </body>
 </html>
